--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="back">#FF000000</color>
+    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_50">#F3E5F5</color>
+    <color name="purple_100">#E1BEE7</color>
+    <color name="purple_200">#CE93D8</color>
+    <color name="purple_300">#BA68C8</color>
+    <color name="purple_400">#AB47BC</color>
+    <color name="purple_500">#8E24AA</color>
+    <color name="purple_600">#7B1FA2</color>
+    <color name="purple_700">#6A1B9A</color>
+    <color name="purple_800">#4A148C</color>
+    <color name="purple_900">#311B92</color>
+    <color name="purple_A100">#EA80FC</color>
+    <color name="purple_A200">#E040FB</color>
+    <color name="purple_A400">#D500F9</color>
+    <color name="purple_A700">#AA00FF</color>
 </resources>
