--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -21,5 +21,16 @@ tools:context=".ThirdFragment">
     app:layout_constraintStart_toStartOf="@+id/prescriptions"
     app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/no_prescriptions_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Prescriptions Found!"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/prescriptions" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
